fix sudden `<a>` jumping in card description

--- a/templates/header.css
+++ b/templates/header.css
@@ -526,7 +526,7 @@ article ul[data-gallery] li.dim a[href] {
   pointer-events: none;
 }
 
-article ul[data-gallery] li.dim figure.card a {
+article ul[data-gallery] li.dim figure.card > a {
   display: block;
 }
 
